# dgg-embeds

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dockerfile
.github/workflows/: docker-publish.yml
src/: cli.yml  main.rs
