[package]
name = "dgg-embeds"
version = "0.1.0"
description = "Scans dgg chat for embed links and stuffs them into an sqlite db."
authors = ["vyneer <vyneer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "2.1"
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "2.33.3", features = ["yaml"] }
tokio = { version = "1", features = ["full"] }
futures-util = "*"
futures-channel = "*"

[target.'cfg(linux)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'  # Optimize for size.