[package]
name = "dgg-embeds"
version = "0.1.0"
description = "Scans dgg chat for embed links and stuffs them into an sqlite db."
authors = ["vyneer <vyneer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "2.1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "*"
futures-channel = "*"
twitch_oauth2 = "0.6.0"
twitch_api2 = { version = "0.6.0-rc.3", features = ["helix", "client", "reqwest_client"] }
dotenv = "*"
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(linux)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.rusqlite]
version = "0.26.1"
features = ["bundled"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 1  # Optimize for speed.