[package]
name = "dgg-embeds"
version = "0.1.4"
description = "Scans dgg chat for embed links and stuffs them into an sqlite db."
authors = ["vyneer <vyn33r@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
tokio-tungstenite = { version = "*", features = ["rustls-tls-webpki-roots"] }
url = "2.1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "*"
futures-channel = "*"
twitch_oauth2 = "0.6.1"
twitch_api2 = { version = "0.6.1", features = ["helix", "client", "reqwest"] }
dotenv = "*"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
ctrlc = { version = "3.0", features = ["termination"] }
crossbeam-channel = "0.5"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 1  # Optimize for speed.